--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,4 +1,4 @@
-name: Publish Rhino Docker Images
+name: Publish Pacstall Docker Images
 
 on:
 #  schedule:
@@ -13,19 +13,16 @@ on:
 env:
   INPUT_VERTAG: ${{ github.event.inputs.vertag }}
   REGISTRY: ghcr.io
-  REGISTRY_IMAGE: ghcr.io/${{ github.repository_owner }}/docker
+  REGISTRY_IMAGE: ghcr.io/${{ github.repository_owner }}/pacstall
 
 jobs:
   build:
-    runs-on: ${{ matrix.runner }}
     strategy:
-      fail-fast: false
       matrix:
-        include:
-          - runner: ubuntu-latest
-            platform: linux/amd64
-          - runner: buildjet-4vcpu-ubuntu-2204-arm
-            platform: linux/arm64
+        OS: ["ubuntu:latest", "ubuntu:devel", "ubuntu:rolling", "debian:stable", "debian:testing", "debian:unstable"]
+        platform: ["linux/amd64", "linux/arm64"]
+      fail-fast: false
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -33,21 +30,24 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         
       - name: Build Dockerfile
         run: |
           vertag=${{ env.INPUT_VERTAG }}
-          ./rhino-docker-builder -f -a off -v ${vertag}
-          echo "BUILT_DOCKFILE=$(ls Dockerfile-RhinoLinux*)"  >> $GITHUB_ENV
+          platform=${{ matrix.platform }}
+          distro=${{ matrix.OS }}
+          ./pacstall-docker-builder -f -a ${platform#*/} -d ${distro} -v ${vertag}
+          echo "BUILT_DOCKFILE=$(ls Dockerfile-Pacstall*)"  >> $GITHUB_ENV
           if [[ -z ${vertag} ]]; then
             echo "DOCK_LABEL=$(date +%Y%m%d)"  >> $GITHUB_ENV
           else
             echo "DOCK_LABEL=${{ env.INPUT_VERTAG }}"  >> $GITHUB_ENV
           fi
-          platform=${{ matrix.platform }}
-          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+          echo "PLATFORM_PAIR=${platform//\//-},${distro/:/-}" >> $GITHUB_ENV
 
       - name: Docker meta
         id: meta
@@ -134,7 +134,7 @@ jobs:
         working-directory: /tmp/digests
         run: |
           docker buildx imagetools create \
-            --annotation "index:org.opencontainers.image.description=Contains a Rhino Linux server image for development." \
+            --annotation "index:org.opencontainers.image.description=Contains a Pacstall Docker image for development." \
             $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)          
 
