--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -13,9 +13,9 @@ on:
 env:
   INPUT_VERTAG: ${{ github.event.inputs.vertag }}
   REGISTRY: ghcr.io
-  REGISTRY_IMAGE: ghcr.io/${{ github.repository_owner }}/pacstall
 
 jobs:
+
   build:
     strategy:
       matrix:
@@ -38,16 +38,18 @@ jobs:
       - name: Build Dockerfile
         run: |
           vertag=${{ env.INPUT_VERTAG }}
-          platform=${{ matrix.platform }}
-          distro=${{ matrix.OS }}
-          ./pacstall-docker-builder -f -a ${platform#*/} -d ${distro} -v ${vertag}
-          echo "BUILT_DOCKFILE=$(ls Dockerfile-Pacstall*)"  >> $GITHUB_ENV
           if [[ -z ${vertag} ]]; then
-            echo "DOCK_LABEL=$(date +%Y%m%d)"  >> $GITHUB_ENV
-          else
-            echo "DOCK_LABEL=${{ env.INPUT_VERTAG }}"  >> $GITHUB_ENV
+            vertag="$(date +%Y%m%d)"
           fi
-          echo "PLATFORM_PAIR=${platform//\//-},${distro/:/-}" >> $GITHUB_ENV
+          platform=${{ matrix.platform }}
+          arch=${platform#*/}
+          distro=${{ matrix.OS }}
+          distro_tag="${distro/:/-}"
+          ./pacstall-docker-builder -f -a ${arch} -d ${distro} -v ${vertag}
+          echo "BUILT_DOCKFILE=Dockerfile-Pacstall-${vertag}-${arch}-${distro_tag}"  >> $GITHUB_ENV
+          echo "DOCK_LABEL=${vertag}.${distro_tag}.${arch}"  >> $GITHUB_ENV
+          echo "PLATFORM_PAIR=${distro_tag}-${arch}" >> $GITHUB_ENV
+          echo "REGISTRY_IMAGE=${{ env.REGISTRY }}/${{ github.repository_owner }}/${distro_tag}" >> $GITHUB_ENV
 
       - name: Docker meta
         id: meta
@@ -90,29 +92,36 @@ jobs:
           retention-days: 1
 
   merge:
+    strategy:
+      matrix:
+        OS: ["ubuntu:latest", "ubuntu:devel", "ubuntu:rolling", "debian:stable", "debian:testing", "debian:unstable"]
+      fail-fast: false
     runs-on: ubuntu-latest
     needs: [build]
     steps:
+      - name: Load envars
+        run: |
+          vertag=${{ env.INPUT_VERTAG }}
+          if [[ -z ${vertag} ]]; then
+            vertag="$(date +%Y%m%d)"
+          fi
+          distro=${{ matrix.OS }}
+          distro_tag="${distro/:/-}"
+          echo "DOCK_LABEL=${vertag}.${distro_tag}" >> $GITHUB_ENV
+          echo "DISTRO_TAG=${distro_tag}" >> $GITHUB_ENV
+          echo "REGISTRY_IMAGE=${{ env.REGISTRY }}/${{ github.repository_owner }}/${distro_tag}" >> $GITHUB_ENV
+
       - name: Download digests
         uses: actions/download-artifact@v4
         with:
           path: /tmp/digests
-          pattern: digests-*
+          pattern: digests-${{ env.DISTRO_TAG }}*
           merge-multiple: true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           version: v0.12.0
-
-      - name: Load tag
-        run: |
-          vertag=${{ env.INPUT_VERTAG }}
-          if [[ -z ${vertag} ]]; then
-            echo "DOCK_LABEL=$(date +%Y%m%d)"  >> $GITHUB_ENV
-          else
-            echo "DOCK_LABEL=${{ env.INPUT_VERTAG }}"  >> $GITHUB_ENV
-          fi
 
       - name: Docker meta
         id: meta
