--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -119,10 +119,10 @@ jobs:
           echo "DOCK_LABEL=${vertag}" >> $GITHUB_ENV
           if [[ ${vertag} == "develop" ]]; then
             echo "FLAVOR_LATEST=false" >> $GITHUB_ENV
-            echo "DATE_DOCK_LABEL=${vertag}-$(date +%Y%m%d)" >> $GITHUB_ENV
+            echo "DATE_DOCK_LABEL=${vertag}-${GITHUB_SHA:0:8}" >> $GITHUB_ENV
           elif [[ ${vertag} == "master" ]]; then
             echo "FLAVOR_LATEST=true" >> $GITHUB_ENV
-            echo "DATE_DOCK_LABEL=${vertag}-$(date +%Y%m%d)" >> $GITHUB_ENV
+            echo "DATE_DOCK_LABEL=${vertag}-${GITHUB_SHA:0:8}" >> $GITHUB_ENV
           else
             echo "FLAVOR_LATEST=true" >> $GITHUB_ENV
           fi
