--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -6,6 +6,12 @@ on:
       vertag:
         description: 'Version Tag'
         required: false
+  push:
+    branches:
+      - develop
+      - master
+    tags:
+      - '*'
   repository_dispatch:
     types: [trigger-build]
 
@@ -43,7 +49,7 @@ jobs:
             vertag=${{ env.INPUT_VERTAG }}
           fi
           if [[ -z ${vertag} ]]; then
-            vertag="master"
+            vertag=${{ github.ref_name }}
           fi
           platform=${{ matrix.platform }}
           arch=${platform#*/}
@@ -112,7 +118,7 @@ jobs:
             vertag=${{ env.INPUT_VERTAG }}
           fi
           if [[ -z ${vertag} ]]; then
-            vertag="master"
+            vertag=${{ github.ref_name }}
           fi
           distro=${{ matrix.OS }}
           distro_tag="${distro/:/-}"
